test/qnumericError3.slq

def main(){
	x:=0:ℕ; // error
}
